--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div id="wrapper">
+        <header class="head">
+            <span class="under">Subscribe</span>
+            <h1 class="under">Blog Title</h1>
+            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.iconpacks.net%2Ffree-icon%2Fsearch-2903.html&psig=AOvVaw0paZ-RWgpevNhO11FB97tV&ust=1709288320114000&source=images&cd=vfe&opi=89978449&ved=0CBMQjRxqFwoTCNiX3qqp0IQDFQAAAAAdAAAAABAE">
+        </header>
+    </div>
 </body>
 </html>
