--- a/index.html
+++ b/index.html
@@ -13,6 +13,62 @@
             <h1 class="under">Blog Title</h1>
             <img src="icon.png">
         </header>
+        <div class="container">
+            <div class="card">
+                <p>World</p>
+                <h2>Example Blog Post</h2>
+                <p>Nov 12</p>
+                <p>This card represents an example blog post.</p>
+                <br>
+                <br>
+                <a href="blog.html">Continue reading</a>
+            </div>
+            <div class="card">
+                <p>World</p>
+                <h2>Example Blog Post</h2>
+                <p>Nov 12</p>
+                <p>This card represents an example blog post.</p>
+                <br>
+                <br>
+                <a href="blog.html">Continue reading</a>
+            </div>
+            <div class="card">
+                <p>World</p>
+                <h2>Example Blog Post</h2>
+                <p>Nov 12</p>
+                <p>This card represents an example blog post.</p>
+                <br>
+                <br>
+                <a href="blog.html">Continue reading</a>
+            </div>
+            <div class="card">
+                <p>Design</p>
+                <h2>Post Title</h2>
+                <p>Nov 11</p>
+                <p>This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                <br>
+                <br>
+                <a href="blog.html">Continue reading</a>
+            </div>
+            <div class="card">
+                <p>Design</p>
+                <h2>Post Title</h2>
+                <p>Nov 11</p>
+                <p>This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                <br>
+                <br>
+                <a href="blog.html">Continue reading</a>
+            </div>
+            <div class="card">
+                <p>Design</p>
+                <h2>Post Title</h2>
+                <p>Nov 11</p>
+                <p>This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                <br>
+                <br>
+                <a href="blog.html">Continue reading</a>
+            </div>
+        </div>
     </div>
 </body>
 </html>
