Anchor Tag Updated

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <p>This card represents an example blog post.</p>
                 <br>
                 <br>
-                <a href="blog.html">Continue reading</a>
+                <a href="blog.html" target="_blank">Continue reading</a>
             </div>
             <div class="card">
                 <p>World</p>
@@ -30,7 +30,7 @@
                 <p>This card represents an example blog post.</p>
                 <br>
                 <br>
-                <a href="blog.html">Continue reading</a>
+                <a href="blog.html" target="_blank">Continue reading</a>
             </div>
             <div class="card">
                 <p>World</p>
@@ -39,7 +39,7 @@
                 <p>This card represents an example blog post.</p>
                 <br>
                 <br>
-                <a href="blog.html">Continue reading</a>
+                <a href="blog.html" target="_blank">Continue reading</a>
             </div>
             <div class="card">
                 <p>Design</p>
@@ -48,7 +48,7 @@
                 <p>This is a wider card with supporting text below as a natural lead-in to additional content.</p>
                 <br>
                 <br>
-                <a href="blog.html">Continue reading</a>
+                <a href="blog.html" target="_blank">Continue reading</a>
             </div>
             <div class="card">
                 <p>Design</p>
@@ -57,7 +57,7 @@
                 <p>This is a wider card with supporting text below as a natural lead-in to additional content.</p>
                 <br>
                 <br>
-                <a href="blog.html">Continue reading</a>
+                <a href="blog.html" target="_blank">Continue reading</a>
             </div>
             <div class="card">
                 <p>Design</p>
@@ -66,7 +66,7 @@
                 <p>This is a wider card with supporting text below as a natural lead-in to additional content.</p>
                 <br>
                 <br>
-                <a href="blog.html">Continue reading</a>
+                <a href="blog.html" target="_blank">Continue reading</a>
             </div>
         </div>
     </div>
