Text Colors Added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </header>
         <div class="container">
             <div class="card">
-                <p>World</p>
+                <p class="blue">World</p>
                 <h2>Example Blog Post</h2>
                 <p>Nov 12</p>
                 <p>This card represents an example blog post.</p>
@@ -24,7 +24,7 @@
                 <a href="blog.html" target="_blank">Continue reading</a>
             </div>
             <div class="card">
-                <p>World</p>
+                <p class="blue">World</p>
                 <h2>Example Blog Post</h2>
                 <p>Nov 12</p>
                 <p>This card represents an example blog post.</p>
@@ -33,7 +33,7 @@
                 <a href="blog.html" target="_blank">Continue reading</a>
             </div>
             <div class="card">
-                <p>World</p>
+                <p class="blue">World</p>
                 <h2>Example Blog Post</h2>
                 <p>Nov 12</p>
                 <p>This card represents an example blog post.</p>
@@ -42,7 +42,7 @@
                 <a href="blog.html" target="_blank">Continue reading</a>
             </div>
             <div class="card">
-                <p>Design</p>
+                <p class="green">Design</p>
                 <h2>Post Title</h2>
                 <p>Nov 11</p>
                 <p>This is a wider card with supporting text below as a natural lead-in to additional content.</p>
@@ -51,7 +51,7 @@
                 <a href="blog.html" target="_blank">Continue reading</a>
             </div>
             <div class="card">
-                <p>Design</p>
+                <p class="green">Design</p>
                 <h2>Post Title</h2>
                 <p>Nov 11</p>
                 <p>This is a wider card with supporting text below as a natural lead-in to additional content.</p>
@@ -60,7 +60,7 @@
                 <a href="blog.html" target="_blank">Continue reading</a>
             </div>
             <div class="card">
-                <p>Design</p>
+                <p class="green">Design</p>
                 <h2>Post Title</h2>
                 <p>Nov 11</p>
                 <p>This is a wider card with supporting text below as a natural lead-in to additional content.</p>
