--- a/blog.html
+++ b/blog.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Blogs</title>
+    <link rel="stylesheet" href="blog.css">
 </head>
 <body>
-    
+    <div id="wrapper">
+        <header class="head">
+            <span class="under">Subscribe</span>
+            <h1 class="under">Blog Title</h1>
+            <img src="icon.png">
+        </header>
+    </div>
 </body>
 </html>
