Grid Body Completed

--- a/blog.html
+++ b/blog.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blogs</title>
     <link rel="stylesheet" href="blog.css">
 </head>
+
 <body>
     <div id="wrapper">
         <header class="head">
@@ -13,6 +15,90 @@
             <h1 class="under">Blog Title</h1>
             <img src="icon.png">
         </header>
+        <div class="container">
+            <div class="inner">
+                <h2 class="text">Sample blog post</h2>
+                <p>January 14, 2014 by <span class="blue">Mack</span></p>
+                <br>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut vero ratione perspiciatis, repellendus
+                    ea et veniam est, autem, numquam obcaecati similique provident ullam adipisci eaque voluptas
+                    repellat velit officiis beatae.</p>
+                <br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore fuga tempora nesciunt culpa optio, neque labore! Fugit nam quia veniam modi minima architecto reprehenderit libero saepe doloremque ea aspernatur, molestiae ratione nisi perspiciatis officia facilis provident quod neque odit maxime sed alias. Porro iure ratione aspernatur quod in sunt ex.</p>
+                <hr>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut vero ratione perspiciatis, repellendus
+                    ea et veniam est, autem, numquam obcaecati similique provident ullam adipisci eaque voluptas
+                    repellat velit officiis beatae.</p>
+                <hr>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut vero ratione perspiciatis, repellendus
+                    ea et veniam est, autem, numquam obcaecati similique provident ullam adipisci eaque voluptas
+                    repellat velit officiis beatae.</p>
+                <br>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut vero ratione perspiciatis, repellendus
+                    ea et veniam est, autem, numquam obcaecati similique provident ullam adipisci eaque voluptas
+                    repellat velit officiis beatae.</p>
+                    <br>
+                <h2>Heading</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, error!</p>
+                <hr>
+                <p>Example color black</p>
+                <hr>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum accusamus minima recusandae, dolorem itaque quisquam maxime inventore eaque voluptatibus, sunt sit eligendi doloribus, dolorum neque sequi nemo at voluptate. Voluptatem?</p>
+                <br>
+                <h2>Sub-heading</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam deserunt amet asperiores repellendus odit debitis itaque accusantium soluta, ex nisi temporibus mollitia vitae. Temporibus sint earum beatae saepe. Unde, nihil!
+                </p>
+                <br>
+                <ul>
+                    <li>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, magni.
+                    </li>
+                    <li>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima, adipisci!
+                    </li>
+                    <li>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, omnis.
+                    </li>
+                </ul>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum facere molestias itaque. Sed distinctio labore nostrum. Non laboriosam minus eaque!</p>
+                <br>
+                <ol>
+                    <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis, repudiandae.</li>
+                    <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis, repudiandae.</li>
+                    <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis, repudiandae.</li>
+                </ol>
+                <br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem soluta a porro quidem iusto consectetur?</p>
+            </div>
+            <div>
+                <h3>About</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, numquam delectus dignissimos tempora labore doloremque ullam quam incidunt dolor distinctio quaerat porro autem ab id facilis omnis totam mollitia nostrum aperiam aspernatur dolorum? Molestias, et dicta debitis dolor doloremque repudiandae illum autem. Molestias, placeat! Vitae recusandae reprehenderit excepturi ullam blanditiis.
+                </p>
+            </div>
+            <div>
+                <h3>Archives</h3>
+                <a href="#">January, 2014</a>
+                <a href="#">February, 2014</a>
+                <a href="#">March, 2014</a>
+                <a href="#">April, 2014</a>
+                <a href="#">May, 2014</a>
+                <a href="#">June, 2014</a>
+                <a href="#">July, 2014</a>
+                <a href="#">August, 2014</a>
+                <a href="#">September, 2014</a>
+                <a href="#">October, 2014</a>
+                <a href="#">November, 2014</a>
+                <a href="#">December, 2014</a>
+            </div>
+            <div>
+                <h3>Elsewhere</h3>
+                <a href="#">Github</a>
+                <a href="#">Twitter</a>
+                <a href="#">Facebook</a>
+            </div>
+        </div>
     </div>
 </body>
+
 </html>
