--- a/blog.html
+++ b/blog.html
@@ -70,7 +70,7 @@
                 <br>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem soluta a porro quidem iusto consectetur?</p>
             </div>
-            <div>
+            <div class="About">
                 <h3>About</h3>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, numquam delectus dignissimos tempora labore doloremque ullam quam incidunt dolor distinctio quaerat porro autem ab id facilis omnis totam mollitia nostrum aperiam aspernatur dolorum? Molestias, et dicta debitis dolor doloremque repudiandae illum autem. Molestias, placeat! Vitae recusandae reprehenderit excepturi ullam blanditiis.
@@ -98,6 +98,8 @@
                 <a href="#">Facebook</a>
             </div>
         </div>
+        <button class="blue-btn">Order Post</button>
+        <button class="grey-btn">Return Post</button>
     </div>
 </body>
 
